--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,77 @@
-# Archivos y carpetas ignorados por git
-*.log
-*.tmp
-*.swp
-.DS_Store
-node_modules/
-venv/
-__pycache__/
-.env
-.idea/
-.vscode/
+# Dependencias
+node_modules
+.pnp
+.pnp.js
 
-# Added by Claude Task Master
+# Archivos de construcción
+.turbo
+dist
+build
+out
+.next
+
+# Testing
+coverage
+
+# Entorno
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
 logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-dev-debug.log
-# Dependency directories
-# Environment variables
-# Editor directories and files
+pnpm-debug.log*
+
+# Editor
 .idea
-.vscode
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-# OS specific
-# Task files
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Turborepo
+.turbo
+
+# Vite
+*.local
+
+# PWA
+**/public/workbox-*.js
+**/public/sw.js
+**/public/fallback-*.js
+
+# Task Master
 tasks.json
-tasks/ 
+tasks/
+
+# Supabase
+.supabase
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+
+# Archivos temporales
+*.tmp
+*.swp
+
+# Cache
+.cache
+.eslintcache
+.stylelintcache
