--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "dev:customer": "turbo run dev --filter=customer-pwa",
+    "dev:admin": "turbo run dev --filter=admin-panel",
+    "dev:driver": "turbo run dev --filter=driver-app",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "test": "turbo run test",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -17,11 +22,11 @@
     "husky": "^8.0.0",
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
-    "turbo": "^1.10.16",
+    "turbo": "^1.13.4",
     "typescript": "^5.3.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": "18.18.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
