--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,13 @@
     },
     "format": {
       "outputs": []
+    },
+    "storybook": {
+      "cache": false,
+      "persistent": true
+    },
+    "build-storybook": {
+      "outputs": ["storybook-static/**"]
     }
   }
 }
