--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,22 +8,36 @@
     "lint": "eslint .",
     "build": "tsc",
     "dev": "tsc --watch",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3",
     "@storybook/addon-a11y": "^8.6.12",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
     "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
     "@storybook/addon-themes": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
     "@storybook/builder-vite": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
     "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
+    "@storybook/test": "^8.6.12",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.15",
+    "@vitest/browser": "^3.1.2",
+    "@vitest/coverage-v8": "^3.1.2",
     "eslint": "^8.54.0",
     "eslint-config-custom": "*",
+    "eslint-plugin-storybook": "^0.12.0",
+    "playwright": "^1.52.0",
     "react": "^18.2.0",
-    "typescript": "^5.3.2"
+    "storybook": "^8.6.12",
+    "typescript": "^5.3.2",
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
@@ -39,5 +53,10 @@
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.8.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
